@@ -450,6 +450,9 @@ New and updated examples and miniapps
   incompressible hyperelastic equations. The example demonstrates the use of
   block nonlinear forms as well as custom block preconditioners.
 
+- Added a new serial example (ex23) to demonstrate the use of second order
+  time integration to solve the wave equation.
+
 - Added a new electromagnetics miniapp, Maxwell, for simulating time-domain
   electromagnetics phenomena as a coupled first order system of equations.
 
